# SpotifyDemo

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
SpotifyDemo/: CMakeLists.txt  SpotifyDemo.cpp  SpotifyDemo.h
SpotifyDemo/include/: Models.h  SpotifyCall.hpp  TokenRetrieval.hpp
SpotifyDemo/src/: SpotifyDemo.cpp
